<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecetasActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="70dp">

            <!-- Título del formulario -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NuevaReceta"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#000"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="20dp"/>

            <!-- Campo para el nombre del paciente -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NombrePaciente"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingBottom="8dp"/>

            <EditText
                android:id="@+id/editTextNombrePaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/IngreseNombrePaciente"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="17sp" />



            <!-- Sección de Fecha de Creación y Fecha de Caducidad -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <!-- Campo para la fecha de creación -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_start"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"/>

                    <EditText
                        android:id="@+id/editTextFechaCreacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="DD/MM/AAAA"
                        android:inputType="date"
                        android:minHeight="48dp"
                        android:textSize="15sp" />
                </LinearLayout>

                <!-- Espacio entre los dos campos -->
                <View
                    android:layout_width="16dp"
                    android:layout_height="match_parent"/>

                <!-- Campo para la fecha de caducidad -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_end"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"/>

                    <EditText
                        android:id="@+id/editTextFechaCaducidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="DD/MM/AAAA"
                        android:inputType="date"
                        android:minHeight="48dp"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
            <!-- Campo para el Diagnóstico -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diag"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:paddingBottom="8dp"/>

            <EditText
                android:id="@+id/editTextDiagnostico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintDiag"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:minLines="2"
                android:textSize="18sp" />

            <!-- Campo para el Tratamiento -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/treatment"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:paddingBottom="8dp"/>

            <EditText
                android:id="@+id/editTextTratamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintTreatment"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:minLines="2"
                android:textSize="18sp" />

            <!-- Campo para los Comentarios -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:paddingBottom="8dp"/>

            <EditText
                android:id="@+id/editTextComentarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintComments"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:minLines="2"
                android:textSize="18sp" />


            <!-- Botón de guardar -->
            <!-- Botones de acción: Descargar PDF y Crear Nueva Receta -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <!-- Botón para Descargar PDF -->
                <Button
                    android:id="@+id/buttonDescargarPdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnPDF"
                    android:drawableLeft="@android:drawable/ic_menu_save"
                    android:layout_marginEnd="13dp"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:paddingStart="11dp"
                    android:paddingEnd="11dp"
                    android:backgroundTint="#24A898"/>

                <Button
                    android:id="@+id/buttonCancelarPdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCancelar"
                    android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
                    android:layout_marginEnd="16dp"
                    android:paddingStart="11dp"
                    android:paddingEnd="11dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:backgroundTint="#24A898"/>


            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>