<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F7FA"
    android:fillViewport="true"> <!-- Añadimos fillViewport para asegurar que el contenido se expanda -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FormRecetaActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <!-- Eliminamos app:layout_constraintBottom_toBottomOf="parent" para permitir que el CardView crezca -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <!-- Título del formulario -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NUEVA RECETA"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    android:textColor="#24A898"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="16dp" />

                <!-- Sección de Fecha de Creación, Fecha de Caducidad y Cédula -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <!-- Campo para la fecha de creación -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fecha_start"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:paddingBottom="8dp"/>

                        <EditText
                            android:id="@+id/editTextFechaCreacion"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:hint="DD/MM/AAAA"
                            android:textSize="16sp"
                            android:inputType="date"
                            android:background="@drawable/edittext"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:drawableStart="@android:drawable/ic_menu_my_calendar"
                            android:drawablePadding="8dp"/>
                    </LinearLayout>

                    <!-- Espacio entre los campos -->
                    <View
                        android:layout_width="16dp"
                        android:layout_height="match_parent"/>

                    <!-- Campo para la fecha de caducidad -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fecha_end"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:paddingBottom="8dp"/>

                        <EditText
                            android:id="@+id/editTextFechaCaducidad"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:hint="DD/MM/AAAA"
                            android:textSize="16sp"
                            android:inputType="date"
                            android:background="@drawable/edittext"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:drawableStart="@android:drawable/ic_menu_my_calendar"
                            android:drawablePadding="8dp"/>
                    </LinearLayout>
                </LinearLayout>

                <!-- Campo para la cédula del doctor -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cédula del Doctor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="8dp"/>

                <EditText
                    android:id="@+id/editcedula"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="Introducir cédula médica"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:background="@drawable/edittext"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:drawableStart="@android:drawable/ic_menu_info_details"
                    android:drawablePadding="8dp"/>

                <!-- Campo para el nombre del doctor -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameDoctor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="8dp"/>

                <EditText
                    android:id="@+id/editTextNombreDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/hintnameDoctor"
                    android:textSize="16sp"
                    android:inputType="textPersonName"
                    android:background="@drawable/edittext"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:drawableStart="@drawable/baseline_perm_identity_24"
                    android:drawablePadding="8dp"/>

                <!-- Campo para el nombre del paciente -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NombrePaciente"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="8dp"/>

                <EditText
                    android:id="@+id/editTextNombrePaciente"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/IngreseNombrePaciente"
                    android:textSize="16sp"
                    android:inputType="textPersonName"
                    android:background="@drawable/edittext"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:drawableStart="@drawable/baseline_perm_identity_24"
                    android:drawablePadding="8dp"/>

                <!-- Campo para el Diagnóstico -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diag"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="8dp"/>

                <EditText
                    android:id="@+id/editTextDiagnostico"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/hintDiag"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:gravity="top|start"
                    android:textSize="16sp"
                    android:background="@drawable/edittext"
                    android:padding="12dp"/>

                <!-- Campo para el Tratamiento -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/treatment"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="8dp"/>

                <EditText
                    android:id="@+id/editTextTratamiento"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/hintTreatment"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:gravity="top|start"
                    android:textSize="16sp"
                    android:background="@drawable/edittext"
                    android:padding="12dp"/>

                <!-- Campo para los Comentarios -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="8dp"/>

                <EditText
                    android:id="@+id/editTextComentarios"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/hintComments"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:gravity="top|start"
                    android:textSize="16sp"
                    android:background="@drawable/edittext"
                    android:padding="12dp"/>

                <!-- Botones de acción -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="24dp">

                    <Button
                        android:id="@+id/buttonDescargarPdf"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/btnPDF"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:backgroundTint="#24A898"
                        android:layout_marginEnd="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:drawableStart="@android:drawable/ic_menu_save"
                        android:drawablePadding="8dp"/>

                    <!-- Botón para Cancelar -->
                    <Button
                        android:id="@+id/buttonCancelarPdf"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/btnCancelar"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@color/k6"
                        android:layout_marginStart="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
                        android:drawablePadding="8dp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>