<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/deniedConstraintLayout"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDialog2"
        android:background="@drawable/custom_bkg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deniedTitle"
            android:text="@string/deniedTitle"
            android:textColor="@color/k10"
            android:textSize="20sp"
            android:paddingTop="28dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/layoutDialog2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deniedDesc"
            android:text="@string/deniedDesc"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/deniedTitle"
            app:layout_constraintBottom_toTopOf="@+id/deniedDone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deniedDone"
            android:text="@string/deniedDone"
            android:textSize="14sp"
            app:cornerRadius="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/k6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deniedDesc"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/deniedImage"
        android:src="@drawable/delete"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutDialog2"
        app:layout_constraintBottom_toTopOf="@+id/layoutDialog2"/>

</androidx.constraintlayout.widget.ConstraintLayout>